<resources>
    <string name="app_name">CarView</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="phone">Phone</string>
    <string name="Name">Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="home">Home</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyCdsBzQrHiM6zAfQuS5XUrkQY96gcN6CX0</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="interduce">We are Students in abour institution . we have learned the topics about programming and information system to benefit the society.</string>
    <string name="team_members">Team Members</string>
    <string name="login">Login</string>
    <string name="login">Login</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="block_user">block User</string>
    <string name="make_him_admin">Make him admin</string>
    <string name="delete_him">delete him</string>
    <string name="add_emergence_number">Add Emergence Number</string>
    <string name="Name">Name</string>
    <string name="number">Number</string>
    <string name="add">Add</string>
    <string name="price">Price :</string>
    <string name="aya_abdelmoaty">Aya abdelmoaty</string>
    <string name="ahemd_adel_ellithy">Ahemd adel ellithy</string>
    <string name="bsaam_adel_eprahim">Bsaam adel eprahim</string>
    <string name="samer_elsayed_anour">Samer elsayed anour</string>
    <string name="sameh_shaban_abdelkader">Sameh shaban abdelkader</string>
    <string name="khaled_mohmmed_elsayed">Khaled mohmmed elsayed</string>
    <string name="ali_amin_ahmed">Ali amin ahmed</string>
    <string name="hssean_khaled_hassan">Hssean Khaled hassan</string>
    <string name="add_showroom">Add Showroom</string>
    <string name="add_car_spar">Add car spar</string>
    <string name="sell_my_car">Sell My Car</string>
    <string name="add_emergencies_no">add emergencies No</string>
    <string name="showroom_name">Showroom Name</string>
    <string name="add_location">Add Location</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="email_address">Email address :</string>
    <string name="address">Address :</string>
    <string name="account_settings">Account settings</string>
    <string name="personal_information">Personal information</string>
    <string name="support">Support</string>
    <string name="get_help">Get help</string>
    <string name="car_name">Car Name</string>
    <string name="car_description">Car Description</string>
    <string name="car_model">Car Model</string>
    <string name="phone_number">Phone Number</string>
    <string name="sell_price">Sell Price</string>
    <string name="sell_my_car">Sell My Car</string>
    <string name="update_your_information">Update your Information</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="update">Update</string>
</resources>
