<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellMyCarFragment.SellMyCarFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/main_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:src="@drawable/car_logo"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/recycler_view"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteTextColor"
                android:textStyle="bold"
                android:textColorHint="@color/whiteTextColor"
                android:hint="@string/car_name"
                android:backgroundTint="@color/whiteTextColor"
                android:layout_marginHorizontal="30dp"
                android:id="@+id/editTextCarName"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/whiteTextColor"
                android:textStyle="bold"
                android:textColorHint="@color/whiteTextColor"
                android:hint="@string/car_description"
                android:backgroundTint="@color/whiteTextColor"
                android:layout_marginHorizontal="30dp"
                android:id="@+id/editTextCarDescription"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteTextColor"
                android:textStyle="bold"
                android:textColorHint="@color/whiteTextColor"
                android:hint="@string/car_model"
                android:backgroundTint="@color/whiteTextColor"
                android:layout_marginHorizontal="30dp"
                android:id="@+id/editTextCarModel"
                android:inputType="number"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteTextColor"
                android:textStyle="bold"
                android:textColorHint="@color/whiteTextColor"
                android:hint="@string/phone_number"
                android:backgroundTint="@color/whiteTextColor"
                android:layout_marginHorizontal="30dp"
                android:id="@+id/editTextPhoneNo"
                android:inputType="number"
                android:textSize="15sp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:backgroundTint="@color/whiteTextColor"
                android:id="@+id/spinnerCategory"
                style="@style/Theme.AppCompat.DayNight.DarkActionBar"
                android:layout_marginVertical="5dp"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteTextColor"
                    android:textStyle="bold"
                    android:textColorHint="@color/whiteTextColor"
                    android:hint="@string/price"
                    android:backgroundTint="@color/whiteTextColor"
                    android:layout_marginHorizontal="30dp"
                    android:id="@+id/price"
                    android:inputType="number"
                    android:textSize="15sp"/>
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteTextColor"
                    android:textStyle="bold"
                    android:textColorHint="@color/whiteTextColor"
                    android:hint="@string/sell_price"
                    android:backgroundTint="@color/whiteTextColor"
                    android:layout_marginHorizontal="30dp"
                    android:id="@+id/sell_price"
                    android:inputType="number"
                    android:textSize="15sp"/>


            </LinearLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bk2"
                android:text="@string/sell_my_car"
                android:id="@+id/btn_sell_my_car"
                />
        </LinearLayout>

    </ScrollView>



</LinearLayout>