<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold"
                android:text="@string/add_emergence_number"
                android:textSize="18sp"
                android:textColor="#000"
                />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="55dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >




            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:textSize="15dp"
                android:textColor="#000"
                android:id="@+id/txt_name"
                android:layout_marginBottom="10dp"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"/>
            <EditText
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/txt_number"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number"
                android:textSize="15sp"
                android:textColor="#000"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_marginVertical="5dp"
                android:background="@drawable/login_button_bk2"
                android:id="@+id/Add"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>