<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"


    >

    <!--    app:cardBackgroundColor="#14237C"-->
    <!--    app:cardCornerRadius="20dp"-->
    <!--    app:cardElevation="10dp"-->

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin"
        >

        <TextView
            style="@style/headerTextPrimary"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:textColorHint="@color/whiteCardColor"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:theme="@style/parent">
            <EditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/whiteCardColor"
                android:hint="@string/login_email_hint"
                android:textColor="@color/whiteCardColor"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:textColorHint="@color/whiteCardColor"
            android:theme="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColorHint="@color/whiteCardColor"
                android:textColor="@color/whiteCardColor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView

            style="@style/viewParent"
            android:text="Forgot Password?"
            android:textColor="@color/whiteTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="end"
            android:onClick="viewForgotPassword"
            android:layout_marginTop="10dp"
            android:id="@+id/textViewForgetPassword"/>

        <Button
            android:id="@+id/btn_login"
            style="@style/loginButton"
            android:text="Login"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            />

        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/whiteTextColor"
            android:text="@string/login_signup_hint"
            android:id="@+id/textViewRegister"
            android:layout_marginTop="@dimen/loginViewsMargin"/>


    </LinearLayout>
</RelativeLayout>
