<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:background="@drawable/main_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:src="@drawable/car_logo"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteTextColor"
                android:textStyle="bold"
                android:textColorHint="@color/whiteTextColor"
                android:hint="@string/showroom_name"
                android:backgroundTint="@color/whiteTextColor"
                android:layout_marginHorizontal="30dp"
                android:id="@+id/edit_text_show_name"
                />



            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/whiteTextColor"
                android:id="@+id/spinnerCategory"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_location"
                android:drawableBottom="@drawable/ic_add_location_black_24dp"
                android:background="@drawable/login_button_bk2"
                android:layout_marginVertical="5dp"
                android:id="@+id/getMap"
                />
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bk2"
                android:text="@string/add_showroom"
                android:id="@+id/btn_add_show_room"
                />



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:id="@+id/lin"
                app:cardCornerRadius="50dp"
                >
                <fragment
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/frg"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"

                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>



</LinearLayout>